<resources>
    <string name="app_name">Mobile ATM</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Oshan Mudannayake</string>
    <string name="nav_header_subtitle">oshan.ivantha@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="drawer_home">Home</string>
    <string name="drawer_history">History</string>
    <string name="drawer_payments">Payments</string>
    <string name="drawer_recharge">Recharge</string>
    <string name="drawer_deals">Deals</string>
    <string name="drawer_personal">Personal</string>
    <string name="drawer_account">Account</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_sign_out">Sign Out</string>

    <string name="action_help">Help</string>
    <string name="action_report">Report</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_acc_balance">Account Balance</string>
    <string name="lbl_acc_unverfiedBalance">Unverfied Balance</string>
    <string name="lbl_acc_spendingLimit">Spending Limit</string>
    <string name="lbl_acc_spendingLimitEnable">Enable Spending Limit</string>
    <string name="lbl_user_firstName">First Name</string>
    <string name="lbl_user_lastName">Last Name</string>
    <string name="lbl_user_email">Email</string>
    <string name="lbl_header_general">General</string>
    <string name="lbl_header_wallet">Wallet</string>
    <string name="lbl_header_accSettings">Wallet Preferences</string>
    <string name="lbl_acc_seed">IOTA Seed</string>
    <string name="btn_acc_save">Save</string>
    <string name="lbl_utility_water">Water</string>
    <string name="lbl_utility_electricity">Electricity</string>
    <string name="lbl_utility_phone">Telephone</string>
    <string name="lbl_utility_internet">Internet</string>
    <string name="lbl_utility_leasing">Leasing</string>
    <string name="lbl_utility_insurance">Insurance</string>
    <string name="lbl_utility_gas">Gas</string>
    <string name="lbl_utility_fuel">Fuel</string>
    <string name="lbl_utility_education">Education</string>
    <string name="lbl_utility_medical">Medical</string>
    <string name="btn_acc_choose">Choose</string>
</resources>
