<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/drawerMainGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/drawer_home" />
        <item
            android:id="@+id/nav_utility_bills"
            android:icon="@drawable/ic_local_atm_black_24dp"
            android:title="Utility Bills" />
        <item
            android:id="@+id/nav_deals"
            android:icon="@drawable/ic_payment_black_24dp"
            android:title="@string/drawer_deals" />
    </group>

    <group
        android:id="@+id/drawerPersonalGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/drawer_history" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_balance_black_24dp"
            android:title="@string/drawer_account" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/drawer_settings" />
    </group>

    <group
        android:id="@+id/drawerAppGroup"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_remove_shopping_cart_black_24dp"
            android:title="@string/drawer_sign_out" />
    </group>
</menu>
