<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="5dp"
    android:layout_marginStart="5dp"
    android:orientation="vertical"
    tools:context=".fragment.AccountFragment">

    <TextView
        android:id="@+id/lbl_header_general"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_header_general"
        android:textColor="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_user_firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_user_firstName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/txt_user_firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_user_lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_user_lastName" />

            <EditText
                android:id="@+id/txt_user_lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_user_email" />

            <EditText
                android:id="@+id/txt_user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/dvd_general"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/lbl_header_wallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_header_wallet"
        android:textColor="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_acc_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_acc_balance" />

            <EditText
                android:id="@+id/txt_acc_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_acc_unverfiedBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_acc_unverfiedBalance" />

            <EditText
                android:id="@+id/txt_acc_unverfiedBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_acc_seed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_acc_seed" />

            <EditText
                android:id="@+id/txt_acc_seed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/dvd_account"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/lbl_header_accSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_header_accSettings"
        android:textColor="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_acc_spendingLimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_acc_spendingLimit" />

            <EditText
                android:id="@+id/txt_acc_spendingLimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_acc_spendingLimitEnable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_acc_spendingLimitEnable" />

            <Switch
                android:id="@+id/swt_acc_spendingLimitEnable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:textAlignment="viewEnd"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/btn_acc_save"
            android:textColor="#ffffff" />
    </LinearLayout>
</LinearLayout>
